Fix game box title overflow

--- a/components/GameBox/gamebox.module.css
+++ b/components/GameBox/gamebox.module.css
@@ -21,8 +21,9 @@
 }
 
 .title {
-  height: 50px;
+  height: 51px;
   padding: 0.5rem;
+  overflow: hidden;
 }
 
 .title h3 {
